agregada nueva clase y cambios en alt de imagenes en index.html

--- a/index.html
+++ b/index.html
@@ -46,37 +46,31 @@
     </div>
     <section class="Productos">
         <div class="Productos_Tarjeta">
-            <img src="img/dulce.jpg" alt="Dulce">
+            <img src="img/dulce.jpg" alt="Dulce Repostero">
             <h5>Dulce Repostero</h5>
             <p>Description</p>
             <span>$10</span>
         </div>
         <div class="Productos_Tarjeta">
-            <img src="img/golosina.jpg" alt="Dulce">
+            <img src="img/golosina.jpg" alt="Golosinas">
             <h5>Golosinas</h5>
             <p>Description</p>
             <span>$15</span>
         </div>
         <div class="Productos_Tarjeta">
-            <img src="img/mascara.jpg" alt="Dulce">
+            <img src="img/mascara.jpg" alt="Mascaras">
             <h5>Mascaras</h5>
             <p>Description</p>
             <span>$20</span>
         </div>
         <div class="Productos_Tarjeta">
-            <img src="img/piñata.jpg" alt="Dulce">
+            <img src="img/piñata.jpg" alt="Piñatas">
             <h5>Piñatas</h5>
             <p>Description</p>
             <span>$50</span>
         </div>
         <div class="Productos_Tarjeta">
-            <img src="img/souvenir.jpg" alt="Dulce">
-            <h5>Souvenir</h5>
-            <p>Description</p>
-            <span>$40</span>
-        </div>
-        <div class="Productos_Tarjeta">
-            <img src="img/souvenir.jpg" alt="Dulce">
+            <img src="img/souvenir.jpg" alt="Souvenirs">
             <h5>Souvenir</h5>
             <p>Description</p>
             <span>$40</span>
@@ -86,7 +80,7 @@
        <div class="contratarContenedorElementos">
            <h1>Contratar</h1>
            <h5>Decoraciones</h5>
-            <img src="img/centro.jpg" alt="Centro">
+            <img src="img/centro.jpg" alt="Centro" class="imgElementoContratar">
             <p>Decoraciones para Casamientos,Cumpleaños, Aniversarios, Fiestas,Bautismos, Quince y mucho mas! <br>
                 Mandanos un mensaje privado a nuestra Redes: 
             </p>
@@ -102,7 +96,7 @@
        <div class="contratarContenedorElementos">
         <h1>Contratar</h1>
         <h5>Souvenirs</h5>
-         <img src="img/souvenir.jpg" alt="Centro">
+         <img src="img/souvenir.jpg" alt="Souvenirs" class="imgElementoContratar">
          <p>Souvenirs para Cumpleaños, Bautismos, Casamientos, Aniversarios y mas!<br>
             Mandanos un mensaje privado a nuestra Redes: 
          </p>
@@ -118,7 +112,7 @@
         <div class="contratarContenedorElementos">
             <h1>Contratar</h1>
             <h5>Piñatas</h5>
-             <img src="img/piñata.jpg" alt="Centro">
+             <img src="img/piñata.jpg" alt="Piñatas" class="imgElementoContratar">
              <p>Piñatas para Cumpleaños, Aniversarios, Fiestas de Quince y mas!<br>
                 Mandanos un mensaje privado a nuestra Redes: 
              </p>
@@ -134,7 +128,7 @@
         <div class="contratarContenedorElementos">
             <h1>Contratar</h1>
             <h5>Tortas</h5>
-             <img src="img/torta.jpg" alt="Centro">
+             <img src="img/torta.jpg" alt="Tortas" class="imgElementoContratar">
              <p>Tortas para Cumpleaños, Aniversarios, Fiestas de Quince y mas!<br>
              Mandanos un mensaje privado a nuestra Redes: 
              </p>
