cambios en los creditos del footer

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <img class="footer_iconmedia" src="img/icon-facebook.png" alt="Whatssapp">
             </a>
         </div>
-        <p>Sitio Web Creado por Santy</p>
+        <p>Sitio Web Creado por Santiago Lopez</p>
     </footer>
     <script src="js/index.js"></script>
     <script src="js/slide.js"></script>
